UPDATE: readme.md & swagger
